# DeepResearchAgent

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  LICENSE  README.md  pyproject.toml
app/: database.py  document_processor.py  main.py  models.py  schemas.py
app/api/: routes.py
app/evals/: __init__.py  datasets.py  evaluators.py  metrics.py  reports.py  runners.py
app/mcp/: server.py
app/research/: graph.py  nodes.py  state.py  tools.py
app/services/: deep_research_service.py  document_service.py  guardrails.py  knowledge_seeder.py  rag_service.py  session_service.py  vector_service.py
config/: logging_config.py  settings.py
mcp_client_agent/: README.md  __init__.py  agent.py
static/: index.html
