[project]
name = "DeepResearchAgent"
version = "1.0.0"
description = "Deep Research Agent - Fast RAG and Deep Research Mode System"
requires-python = ">=3.9"
dependencies = [
    # FastAPI & Web
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    
    # Database
    "sqlalchemy>=2.0.36",  # Updated for Python 3.13 compatibility
    "alembic>=1.13.0",
    
    # Vector Database
    "chromadb>=0.5.0",  # Updated for NumPy 2.0 compatibility
    "numpy<2.0",  # Pin NumPy < 2.0 until ChromaDB fully supports NumPy 2.0
    
    # LLM & Embeddings
    "openai>=1.0.0",  # OpenAI API client (also used for guardrails moderation API)
    "langchain",
    "langchain-openai",
    "langchain-community",  # Required for Chroma vectorstore
    "langchain-core",  # Required for prompts and messages
    "langchain-text-splitters",  # Required for text splitters
    "langchain-chroma",  # Required for Chroma vectorstore (new package)
    "langgraph>=0.0.20",  # Required for Phase 2: Deep Research Mode (state machine orchestration)
    
    # Document Processing
    "pypdf==3.17.4",
    "python-docx==1.1.0",
    
    # Phase 3: Evaluations
    "ragas>=0.1.0",  # RAG evaluation framework - provides metrics like faithfulness, answer_relevance
    "datasets>=2.14.0",  # HuggingFace datasets - provides access to benchmark datasets (RAGAS, BEIR)
    "beir>=1.0.0",  # Optional but recommended: BEIR benchmark datasets for additional evaluation options
    
    # Phase 3: Guardrails
    "spacy>=3.7.0",  # Natural Language Processing for NER and PII detection
    "presidio-analyzer>=2.2.0",  # Advanced PII detection (emails, SSNs, phone numbers, etc.)
    "presidio-anonymizer>=2.2.0",  # PII redaction and anonymization
    
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "python-json-logger==2.0.7",  # JSON formatted logging
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.12.0",
    "ruff==0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure hatchling to find packages in 'app' and 'config' directories
[tool.hatch.build.targets.wheel]
packages = ["app", "config"]

# Use dependency-groups instead of deprecated tool.uv.dev-dependencies
[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "black==23.12.0",
    "ruff==0.1.8",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
