[project]
name = "DeepResearchAgent"
version = "1.0.0"
description = "Deep Research Agent - Fast RAG and Deep Research Mode System"
requires-python = ">=3.10"
dependencies = [
    # FastAPI & Web
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.24.0",
    "python-multipart>=0.0.9",
    # Relational DB (SQLAlchemy works with SQLite locally and PostgreSQL in production)
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver (ignored when using SQLite)
    # Vector DB — Pinecone (cloud-native, replaces local ChromaDB)
    "pinecone>=4.0.0",
    # LLM & Embeddings
    "openai>=1.0.0",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "langgraph>=0.0.20",
    "langgraph-checkpoint-redis>=0.0.1",
    # Web search (Tavily — fallback when RAG KB has no results)
    "tavily-python>=0.3.0",
    # HuggingFace dataset seeder
    "datasets>=2.14.0",
    # Document Processing
    "pypdf==3.17.4",
    "python-docx==1.1.0",
    # MCP
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
evals = [
    "ragas>=0.1.17",
    "beir>=1.0.0",
]
# guardrails: DO NOT install on Replit free tier (512 MB RAM).
# spaCy loads a ~150 MB NLP model that alone consumes 30% of available RAM.
# The app automatically falls back to regex-based PII detection (EMAIL, PHONE,
# SSN, CREDIT_CARD, IP_ADDRESS) when these packages are absent — no code change needed.
# Install only on deployments with >=1 GB RAM (Railway, Fly.io, local, Replit Core+).
guardrails = [
    "spacy>=3.7.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx>=0.27.0",
    "black==23.12.0",
    "ruff==0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure hatchling to find packages in 'app' and 'config' directories
[tool.hatch.build.targets.wheel]
packages = ["app", "config"]


[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
